--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -6,6 +6,10 @@
 </head>
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+
+
+
+
   <script>
     // Get your shorts on - this is an array workout!
     // ## Array Cardio Day 1
@@ -37,20 +41,37 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const filtered = inventors.filter(born => born['year'] > 1499  && born["year"] < 1600);
+    console.log(filtered);    
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const names = inventors.map(x => `${x["first"]} ${x["last"]}`)
+    console.log(names);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const sortedAge = inventors.sort(function(a,b) {
+                                      return ((a.passed - a.year) - (b.passed - b.year))
+                                    }).reverse();
+    console.log(sortedAge);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    let totalLife = inventors.reduce(function (accumulator, pilot) {
+                                      return accumulator + (pilot.passed - pilot.year);
+  
+    }, 0);
+    console.log(totalLife);
+
 
     // 5. Sort the inventors by years lived
+    // Voir 3.
+
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+
 
 
     // 7. sort Exercise
@@ -59,6 +80,13 @@
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const instances = {car : 0, truck: 0, bike: 0, walk: 0, van: 0};
+
+    for(i=0;i<data.length;i++) {
+      instances[data[i]] += 1;
+    }
+    console.log(instances);
 
   </script>
 </body>
